# Gengine

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.org  TODO.org
include/: Fwd.hpp  componentmanager.hpp  fwd.hpp  gameevent.hpp  gameobjectbase.hpp  gengine.hpp  inputmanager.hpp  screenmanager.hpp  sprite.hpp  spriteinfo.hpp  systemmanager.hpp  updatemanager.hpp  utility.hpp
src/: CMakeLists.txt  componentmanager.cpp  gameobject.cpp  gameobjectbase.cpp  gengine.cpp  inputmanager.cpp  screenmanager.cpp  sprite.cpp  spriteinfo.cpp  systemmanager.cpp  updatemanager.cpp  utility.cpp
test/: CMakeLists.txt  guy.cpp  guy.hpp  main.cpp
test/config/: guy.json
